Temp fix for code block overflow
Adds overflow-x scrolling for pre blocks (but not code blocks specifically--even using a :has selector, I somehow couldn't get that to work).

--- a/resources/assets/styles/style.css
+++ b/resources/assets/styles/style.css
@@ -60,6 +60,11 @@ pre > code {
     background: none;
 }
 
+/* Very temporary overflow fix */
+pre {
+    overflow-x: scroll;
+}
+
 details {
     padding: 0 1em;
     border-radius: 2px;
